--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -88,7 +88,7 @@ interval=30
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
 interval=10
-LABEL= 
+LABEL=⚙️ 
 #min_width=CPU: 100.00%
 #T_WARN=50
 #T_CRIT=80
@@ -108,7 +108,7 @@ command=$SCRIPT_DIR/arch-update
 interval=3600
 markup=pango
 LABEL=☑️ 
-BASE_COLOR=#5fff5f
+BASE_COLOR=#FFFFFF
 UPDATE_COLOR=#FFF600
 
 [wifi]
