--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -48,6 +48,10 @@ markup=none
 #interval=1
 #color=#f5af19
 
+[gpa-check]
+command=$SCRIPT_DIR/gpa-check
+interval=persist
+
 [i3-focusedwindow]
 label=📂 
 command=$SCRIPT_DIR/i3-focusedwindow 20
