--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -51,7 +51,7 @@ markup=none
 [gpa-check]
 label=THISISILABEL
 command=$SCRIPT_DIR/gpa-check
-interval=persist
+interval=1
 
 [i3-focusedwindow]
 label=📂 
