--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -171,7 +171,8 @@ DEFAULT_TIMER=2280
 PLAY_LABEL=(playing)
 PAUSE_LABEL=(paused)
 TIMER_LOOP=true
-NEUTRAL_COLOR=#151515bf
+# YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
+NEUTRAL_COLOR=#1b2b34bf
 
 [mail]
 markup=pango
