--- a/.config/i3/config
+++ b/.config/i3/config
@@ -273,6 +273,7 @@ bar {
 		status_command SCRIPT_DIR=~/.config/i3blocks i3blocks -c /home/mark/.config/i3blocks/i3blocks.conf #i3blocks
 		i3bar_command i3bar -t
 		# THIS IS FOR WIFI/INTERNET ICON ON STATUS BAR THAT LOOKS WEIRD
+		# COMMENT OUT TO SHOW IT
 		tray_output none
 		font pango:Roboto Mono Nerd Font 8
 		position top
