--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -86,13 +86,13 @@ WIDTH=1
 
 [memory]
 command=$SCRIPT_DIR/memory
-label=🧠 
+label=🐏 
 interval=30
 
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
 interval=10
-LABEL=⚙️ 
+LABEL=🧠 
 #min_width=CPU: 100.00%
 #T_WARN=50
 #T_CRIT=80
@@ -111,7 +111,7 @@ color=#ffffff
 command=$SCRIPT_DIR/arch-update
 interval=3600
 markup=pango
-LABEL=☑️ 
+LABEL=🌏 
 BASE_COLOR=#FFFFFF
 UPDATE_COLOR=#FFF600
 
@@ -153,7 +153,7 @@ interval=once
 signal=11
 TEXT_ON=⌨️ Num
 #TEXT_OFF=
-#COLOR_ON=#FFFFFF
+COLOR_ON=#FFFFFF
 #HIDE_WHEN_OFF=1
 
 # this is actually good i just dont have a use for it right now
