--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -52,74 +52,89 @@ markup=none
 command=$SCRIPT_DIR/gpa-check
 interval=persist
 
-[i3-focusedwindow]
-label=📂 
-command=$SCRIPT_DIR/i3-focusedwindow 20
-interval=persist
-
-[disk]
-command=$SCRIPT_DIR/disk
-LABEL=💽 
-#DIR=$HOME
-#ALERT_LOW=10
-interval=30
-
-[disk-io]
-command=$SCRIPT_DIR/disk-io
-#command=$SCRIPT_DIR/disk-io -w 3 -M -P 0
-interval=persist
+[mail]
 markup=pango
-#LABEL=
-instance=/^nvme0n1/
-#DT=5
-#MB_ONLY=0 #0 or 1
-#KB_ONLY=0 #0 or 1
-WIDTH=1
-#MB_PRECISION=1
-#KB_PRECISION=0
-#REGEX=/^(s|h)d[a-zA-Z]+/
-#THRESHOLD=0
-#WARN_COLOR="#FF0000"
-#SEPARATOR=/
-#PREFIX=
-#SUFFIX="B/s"
+command=$SCRIPT_DIR/mail
+interval=150
+#signal=12
 
-[memory]
-command=$SCRIPT_DIR/memory
-label=🐏 
-interval=30
+[eyedropper]
+command=$SCRIPT_DIR/eyedropper
+full_text=<span foreground="#ffffff">🖌️</span>
+#🎨🌈
+instance=#ffffff
+markup=pango
+
+#  [i3-focusedwindow]
+#  label=📂 
+#  command=$SCRIPT_DIR/i3-focusedwindow 20
+#  interval=persist
+
+#  [disk]
+#  command=$SCRIPT_DIR/disk
+#  LABEL=💽 
+#  #DIR=$HOME
+#  #ALERT_LOW=10
+#  interval=30
+
+#  [disk-io]
+#  command=$SCRIPT_DIR/disk-io
+#  #command=$SCRIPT_DIR/disk-io -w 3 -M -P 0
+#  interval=persist
+#  markup=pango
+#  #LABEL=
+#  instance=/^nvme0n1/
+#  #DT=5
+#  #MB_ONLY=0 #0 or 1
+#  #KB_ONLY=0 #0 or 1
+#  WIDTH=1
+#  #MB_PRECISION=1
+#  #KB_PRECISION=0
+#  #REGEX=/^(s|h)d[a-zA-Z]+/
+#  #THRESHOLD=0
+#  #WARN_COLOR="#FF0000"
+#  #SEPARATOR=/
+#  #PREFIX=
+#  #SUFFIX="B/s"
+
+#  [memory]
+#  command=$SCRIPT_DIR/memory
+#  label=🐏 
+#  interval=30
 
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
 interval=10
-LABEL=🧠 
+LABEL=📳 
+#⚙️🧠 
 #min_width=CPU: 100.00%
 #T_WARN=50
 #T_CRIT=80
 #DECIMALS=2
 
-[temperature]
-command=$SCRIPT_DIR/temperature
-label=🌡 
-interval=10
-#T_WARN=70
-#T_CRIT=90
-#SENSOR_CHIP=""
-color=#ffffff
+#  [temperature]
+#  command=$SCRIPT_DIR/temperature
+#  label=🌡 
+#  interval=10
+#  #T_WARN=70
+#  #T_CRIT=90
+#  #SENSOR_CHIP=""
+#  color=#ffffff
 
 [arch-update]
 command=$SCRIPT_DIR/arch-update
 interval=3600
 markup=pango
-LABEL=🌏 
+#LABEL=📡🌏 
+LABEL=📡 
 BASE_COLOR=#FFFFFF
 UPDATE_COLOR=#FFF600
 
-[wifi]
-command=$SCRIPT_DIR/wifi
-label=📡 
-INTERFACE=wlo1
-interval=60
+#  [wifi]
+#  command=$SCRIPT_DIR/wifi
+#  label=📡 
+#  INTERFACE=wlo1
+#  interval=60
 
 [bandwidth]
 command=$SCRIPT_DIR/bandwidth
@@ -128,12 +143,6 @@ INTERFACE=enp3s0
 INLABEL=⬇️ 
 OUTLABEL=⬆️ 
 #TREAT_UNKNOWN_AS_UP=0
-
-[eyedropper]
-command=$SCRIPT_DIR/eyedropper
-full_text=<span foreground="#ffffff">💧</span>
-instance=#ffffff
-markup=pango
 
 [volume]
 command=$SCRIPT_DIR/volume
@@ -145,40 +154,35 @@ MIXER=default
 #SCONTROL=[determined automatically]
 #NATURAL_MAPPING=0
 
-[keyindicator]
-command=$SCRIPT_DIR/keyindicator
-KEY=NUM
-markup=pango
-interval=once
-signal=11
-TEXT_ON=⌨️ Num
-#TEXT_OFF=
-COLOR_ON=#FFFFFF
-#HIDE_WHEN_OFF=1
+#  [keyindicator]
+#  command=$SCRIPT_DIR/keyindicator
+#  KEY=NUM
+#  markup=pango
+#  interval=once
+#  signal=11
+#  TEXT_ON=⌨️ Num
+#  #TEXT_OFF=
+#  COLOR_ON=#FFFFFF
+#  #HIDE_WHEN_OFF=1
 
 # this is actually good i just dont have a use for it right now
-[timer_and_stopwatch]
-# the DEFAULT_MODE variable must be either timer or stopwatch
-command=$SCRIPT_DIR/timer_and_stopwatch
-format=json
-interval=1
-TIMER_LABEL=⏳
-STOPWATCH_LABEL=⏱️
-DEFAULT_MODE=timer
-DEFAULT_STOPWATCH=0
-# 2280 = 38m for laundry
-DEFAULT_TIMER=2280
-PLAY_LABEL=(playing)
-PAUSE_LABEL=(paused)
-TIMER_LOOP=true
-# YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
-NEUTRAL_COLOR=#1b2b34bf
+#  [timer_and_stopwatch]
+#  # the DEFAULT_MODE variable must be either timer or stopwatch
+#  command=$SCRIPT_DIR/timer_and_stopwatch
+#  format=json
+#  interval=1
+#  TIMER_LABEL=⏳
+#  STOPWATCH_LABEL=⏱️
+#  DEFAULT_MODE=timer
+#  DEFAULT_STOPWATCH=0
+#  # 2280 = 38m for laundry
+#  DEFAULT_TIMER=2280
+#  PLAY_LABEL=(playing)
+#  PAUSE_LABEL=(paused)
+#  TIMER_LOOP=true
+#  # YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
+#  NEUTRAL_COLOR=#1b2b34bf
 
-[mail]
-markup=pango
-command=$SCRIPT_DIR/mail
-interval=150
-#signal=12
 
 [calendar]
 command=$SCRIPT_DIR/calendar
