--- a/.config/i3/config
+++ b/.config/i3/config
@@ -50,10 +50,11 @@ bindsym --release $mod+z exec --no-startup-id flameshot gui
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
+#bindsym $mod+d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
 
-bindsym $mod+Shift+d mode "command"
+bindsym $mod+d mode "command"
 mode "command" {
+	bindsym d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
     bindsym c exec --no-startup-id ~/.local/bin/dmconf; mode "default"
     bindsym f exec --no-startup-id ~/.local/bin/dmenufm/dmenufm; mode "default"
     bindsym k exec --no-startup-id ~/.local/bin/dmkill; mode "default"
