--- a/.config/i3/config
+++ b/.config/i3/config
@@ -272,13 +272,14 @@ bar {
 		# STATUS BARS
         ## status_command i3status #default status
         ## status_command i3status -c /home/mark/.config/i3status/i3status.conf #custom status
-		status_command SCRIPT_DIR=~/.config/i3blocks i3blocks -c /home/mark/.config/i3blocks/i3blocks.conf #i3blocks
+		status_command SCRIPT_DIR=~/.config/i3blocks i3blocks -c /home/mark/.config/i3blocks/i3blocks.conf
 		i3bar_command i3bar -t
 		# THIS IS FOR WIFI/INTERNET ICON ON STATUS BAR THAT LOOKS WEIRD
 		# COMMENT OUT TO SHOW IT
 		tray_output none
 		font pango:Roboto Mono Nerd Font 8
 		position top
+
         colors {
                 background $barcolor
                 separator #282828
