--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -48,6 +48,11 @@ markup=none
 #interval=1
 #color=#f5af19
 
+[weather]
+markup=pango
+command=$SCRIPT_DIR/weather
+interval=1
+
 [gpa-check]
 command=$SCRIPT_DIR/gpa-check
 interval=persist
