--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -59,7 +59,7 @@ interval=150
 #signal=12
 
 [weather]
-command=$SCRIPT_DIR/weather
+command=$HOME/p-dot-script/weather
 interval=900
 
 [eyedropper]
