--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -170,22 +170,21 @@ MIXER=default
 #  #HIDE_WHEN_OFF=1
 
 # this is actually good i just dont have a use for it right now
-#  [timer_and_stopwatch]
-#  # the DEFAULT_MODE variable must be either timer or stopwatch
-#  command=$SCRIPT_DIR/timer_and_stopwatch
-#  format=json
-#  interval=1
-#  TIMER_LABEL=⏳
-#  STOPWATCH_LABEL=⏱️
-#  DEFAULT_MODE=timer
-#  DEFAULT_STOPWATCH=0
-#  # 2280 = 38m for laundry
-#  DEFAULT_TIMER=2280
-#  PLAY_LABEL=(playing)
-#  PAUSE_LABEL=(paused)
-#  TIMER_LOOP=true
-#  # YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
-#  NEUTRAL_COLOR=#1b2b34bf
+[timer_and_stopwatch]
+# the DEFAULT_MODE variable must be either timer or stopwatch
+command=$SCRIPT_DIR/timer_and_stopwatch
+format=json
+interval=1
+TIMER_LABEL=⏳
+STOPWATCH_LABEL=⏱️
+DEFAULT_MODE=timer
+DEFAULT_STOPWATCH=0
+DEFAULT_TIMER=2700
+PLAY_LABEL=(playing)
+PAUSE_LABEL=(paused)
+TIMER_LOOP=true
+# YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
+NEUTRAL_COLOR=#1b2b34bf
 
 
 [calendar]
