--- a/.config/i3/config
+++ b/.config/i3/config
@@ -48,13 +48,11 @@ bindsym $mod+Shift+0 kill
 bindsym --release $mod+Shift+z exec --no-startup-id i3-scrot -d 
 bindsym --release $mod+z exec --no-startup-id flameshot gui
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
-#bindsym $mod+d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
+# dmenu
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
 
 bindsym $mod+d mode "command"
 mode "command" {
-	bindsym d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
     bindsym c exec --no-startup-id ~/.local/bin/dmconf; mode "default"
     bindsym f exec --no-startup-id ~/.local/bin/dmenufm/dmenufm; mode "default"
     bindsym k exec --no-startup-id ~/.local/bin/dmkill; mode "default"
