--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -52,6 +52,10 @@ markup=none
 command=$SCRIPT_DIR/gpa-check
 interval=persist
 
+[bkp-check]
+command=$SCRIPT_DIR/bkp-check
+interval=persist
+
 [mail]
 markup=pango
 command=$SCRIPT_DIR/mail
