--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -52,6 +52,10 @@ markup=none
 command=$SCRIPT_DIR/gpa-check
 interval=persist
 
+[ytdl-check]
+command=$SCRIPT_DIR/ytdl-check
+interval=persist
+
 [bkp-check]
 command=$SCRIPT_DIR/bkp-check
 interval=persist
