--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -247,39 +247,97 @@ draw_bold_text_with_bright_colors: true
 #cyan:    '0x8FBCBB'
 #white:   '0xECEFF4'
 
-# Colors (Oceanic Next)
 colors:
   # Default colors
   primary:
-    background: '#1b2b34'
-    foreground: '#d8dee9'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '#1b2b34'
-    cursor: '#ffffff'
+    background: '0x272822'
+    foreground: '0xf8f8f2'
 
   # Normal colors
   normal:
-    black:   '#343d46'
-    red:    '#6699cc'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   '0x272822'
+    red:     '0x57aaba'
+    green:   '0x78a51d'
+    yellow:  '0xa7814c'
+    blue:    '0xad1f52'
+    magenta: '0x885FD2'
+    cyan:    '0xa1efe4'
+    white:   '0xf8f8f2'
 
   # Bright colors
   bright:
-    black:   '#343d46'
-    red:    '#6699cc'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   '0x75715e'
+    red:     '0x66d9ef'
+    green:   '0xa6e22e'
+    yellow:  '0xf4bf75'
+    blue:    '0xff6fa3'
+    magenta: '0xae81ff'
+    cyan:    '0x4a6d68'
+    white:   '0xd1d1d1'
+
+# yellow comments
+#   colors:
+#   # Default colors
+#   primary:
+#   background: '0x263238'
+#   foreground: '0xeceff1'
+#   
+#   # Normal colors
+#   normal:
+#   black:   '0x263238'
+#   red:     '0xff9800'
+#   green:   '0x8bc34a'
+#   yellow:  '0xffc107'
+#   blue:    '0x03a9f4'
+#   magenta: '0xf76596'
+#   cyan:    '0x009688'
+#   white:   '0xcfd8dc'
+#   
+#   # Bright colors
+#   bright:
+#   black:   '0x37474f'
+#   red:     '0xffa74d'
+#   green:   '0x9ccc65'
+#   yellow:  '0xffa000'
+#   blue:    '0x81d4fa'
+#   magenta: '0xad1457'
+#   cyan:    '0x26a69a'
+#   white:   '0xeceff1'
+
+
+# Colors (Oceanic Next)
+#   colors:
+#   # Default colors
+#   primary:
+#   background: '#1b2b34'
+#   foreground: '#d8dee9'
+#   
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#   text: '#1b2b34'
+#   cursor: '#ffffff'
+#   
+#   # Normal colors
+#   normal:
+#   black:   '#343d46'
+#   red:    '#6699cc'
+#   green:   '#99C794'
+#   yellow:  '#FAC863'
+#   blue:    '#6699cc'
+#   magenta: '#c594c5'
+#   cyan:    '#5fb3b3'
+#   white:   '#d8dee9'
+#   
+#   # Bright colors
+#   bright:
+#   black:   '#343d46'
+#   red:    '#6699cc'
+#   green:   '#99C794'
+#   yellow:  '#FAC863'
+#   blue:    '#6699cc'
+#   magenta: '#c594c5'
+#   cyan:    '#5fb3b3'
+#   white:   '#d8dee9'
 
 # Visual Bell
 #
@@ -311,7 +369,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.7
+background_opacity: 0.95
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
