--- a/.config/i3/config
+++ b/.config/i3/config
@@ -211,7 +211,7 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id numlockx on
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id picom --experimental-backend
-exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Really-Cool-Wallpapers-HD.jpg
+exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
 #exec --no-startup-id qutebrowser; workspace $ws2
@@ -249,7 +249,8 @@ set $fws		#000000
 # NOW GO TO THIS FILE AND SEARCH TAG :bar:
 # file:///home/mark/.config/i3blocks/i3blocks.conf
 
-set $barcolor   #1b2b34bf # oceanic
+set $barcolor	#272822bf		#monokai
+#	set $barcolor   #1b2b34bf # oceanic
 #set $barcolor 	#151515bf # chalk
 #set $barcolor	#2E3440bf # nord
 # -----------------------------------------
