--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,7 +49,8 @@ bindsym --release $mod+Shift+z exec --no-startup-id i3-scrot -d
 bindsym --release $mod+z exec --no-startup-id flameshot gui
 
 # dmenu
-bindsym $mod+Shift+d exec --no-startup-id dmenu_run -fn "Roboto Mono Nerd Font-8" -sb black -h 18
+bindsym $mod+Shift+d exec --no-startup-id ~/.local/bin/dmrun-recent
+bindsym $mod+Shift+y exec --no-startup-id clipmenu -fn "Roboto Sans Mono-8"
 
 bindsym $mod+d mode "command"
 mode "command" {
@@ -59,6 +60,7 @@ mode "command" {
     bindsym s exec --no-startup-id ~/.local/bin/dmsearch; mode "default"
     bindsym q exec --no-startup-id ~/.local/bin/dmqute; mode "default"
     bindsym l exec --no-startup-id ~/.local/bin/dmlogout; mode "default"
+    bindsym t exec --no-startup-id ~/.local/bin/dmtodo; mode "default"
     #bindsym r exec --no-startup-id ~/.local/bin/dmscrot; mode "default"
     bindsym Escape mode "default"
 }
@@ -210,6 +212,7 @@ bindsym $mod+r mode "resize"
 # Startup tag:cscs
 exec_always --no-startup-id numlockx on
 exec_always --no-startup-id autotiling
+exec_always --no-startup-id clipmenud
 exec_always --no-startup-id picom --experimental-backend
 exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
