--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,3 +1,10 @@
+# more cool stuff:
+# https://github.com/ranger/ranger/wiki/Custom-Commands
+
+
+
+
+
 # ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
@@ -758,5 +765,7 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
-# CUSTOM
+# CUSTOM =====================================================================
 map <C-d> shell dragon -a -x %p --and-exit
+map <A-f> fzf_select
+map <A-g> fzf_rga_documents_search
