--- a/.config/i3/config
+++ b/.config/i3/config
@@ -446,7 +446,8 @@ bindsym $mod+m bar mode toggle
 for_window [class="Yad"] floating enable
 
 # moar keybindings
-bindsym $mod+Shift+f		exec --no-startup-id bash ~/.local/bin/fontpreview
+bindsym $mod+Shift+f		exec --no-startup-id bash ~/.local/bin/fontpreview && qutebrowser ~/.local/bin/fonts.html; workspace $ws2
+
 bindsym $mod+Shift+x		exec --no-startup-id ~/.local/bin/dmprompt "Poweroff?" ~/.local/bin/poweroff.sh
 bindsym $mod+Shift+m		exec --no-startup-id keynav
 bindsym $mod+Shift+a		exec --no-startup-id ibus emoji
