--- a/.config/i3/config
+++ b/.config/i3/config
@@ -457,6 +457,7 @@ bindsym $mod+BackSpace		exec --no-startup-id bash ~/.local/bin/flash-win
 #bindsym $mod+Shift+Escape	exec sudo poweroff # OR exec bash ~/.local/bin/poweroff.sh
 bindsym $mod+g				exec --no-startup-id bash ~/.local/bin/push-all
 bindsym $mod+b				exec --no-startup-id bash ~/.local/bin/backup-phone.sh
+bindsym $mod+y				exec --no-startup-id youtube-dl https://youtube.com/playlist?list=PLrbbUMGM2tEj3PbprusLpVP4gKCYoIDuc 
 
 bindsym $mod+Shift+c		exec --no-startup-id tdrop -am -w 30% -y 30% -x 35% -n 2 alacritty -e R -q --vanilla
 bindsym $mod+Shift+e 		exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 3 alacritty -e neomutt
