--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -66,9 +66,9 @@ command=$SCRIPT_DIR/mail
 interval=150
 #signal=12
 
-[weather]
-command=$HOME/p-dot-script/weather
-interval=900
+#	[weather]
+#	command=$HOME/p-dot-script/weather
+#	interval=900
 
 [eyedropper]
 command=$SCRIPT_DIR/eyedropper
