--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -10,6 +10,8 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
+  # search for available colors:
+  # dircolors --print-database | grep '^TERM'
   TERM: xterm-256color
   #WINIT_X11_SCALE_FACTOR: '2.0'
 
