--- a/.config/i3/config
+++ b/.config/i3/config
@@ -220,8 +220,8 @@ exec_always --no-startup-id clipmenud
 exec_always --no-startup-id picom --experimental-backend
 
 # wallpaper options
-exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
-#	exec_always ~/.local/bin/styli.sh -p
+#	exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
+exec_always ~/.local/bin/styli.sh -s dark
 
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
@@ -454,7 +454,7 @@ for_window [class="Yad"] floating enable
 
 # moar keybindings
 bindsym $mod+Shift+f		exec --no-startup-id bash ~/.local/bin/fontpreview && qutebrowser ~/.local/bin/fonts.html; workspace $ws2
-bindsym $mod+Shift+s		exec --no-startup-id bash ~/.local/bin/styli.sh -p
+bindsym $mod+Shift+w		exec --no-startup-id bash ~/.local/bin/styli.sh -s dark
 
 bindsym $mod+Shift+x		exec --no-startup-id ~/.local/bin/dmprompt "Poweroff?" ~/.local/bin/poweroff.sh
 bindsym $mod+Shift+m		exec --no-startup-id keynav
