--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,14 +15,14 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
 #  "class_g = 'XTerm'",
   "class_g = 'kitty'",
-#  "class_g = 'Alacritty'",
+ #	"class_g = 'Alacritty'",
 #  "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
@@ -159,11 +159,11 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 1.0
+#	frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
