--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 #set $refresh_i3status killall -SIGUSR1 i3status
-set $refresh_i3status killall i3bar && i3bar -tb bar-0
+#	set $refresh_i3status killall i3bar && i3bar -tb bar-0  # this is the one you were using with i3blocks
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -218,6 +218,7 @@ exec_always --no-startup-id numlockx on
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id clipmenud
 exec_always --no-startup-id picom --experimental-backend
+exec_always --no-startup-id ~/.local/bin/launchpolybar.sh
 
 # wallpaper options
 #	exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
@@ -281,33 +282,31 @@ client.urgent           $ubgcolor       $ubgcolor       $textcolor      $ubgcolo
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
+#	bar {
 		# STATUS BARS
-        ## status_command i3status #default status
-        ## status_command i3status -c /home/mark/.config/i3status/i3status.conf #custom status
-		status_command SCRIPT_DIR=~/.config/i3blocks i3blocks -c /home/mark/.config/i3blocks/i3blocks.conf
-		i3bar_command i3bar -t
-		# THIS IS FOR WIFI/INTERNET ICON ON STATUS BAR THAT LOOKS WEIRD
-		# COMMENT OUT TO SHOW IT
-		tray_output none
-		font pango:Roboto Mono Nerd Font 8
-		position top
-		#height 30
+        #	status_command i3status #default status
+        #	status_command i3status -c /home/mark/.config/i3status/i3status.conf #custom status
+		#	status_command SCRIPT_DIR=~/.config/i3blocks i3blocks -c /home/mark/.config/i3blocks/i3blocks.conf
+		#	i3bar_command i3bar -t
+		#	tray_output none # THIS IS FOR WIFI/INTERNET ICON ON STATUS BAR THAT LOOKS WEIRD COMMENT OUT TO SHOW IT
+		#	font pango:Roboto Mono Nerd Font 8
+		#	position top
+		#	height 30
 
-        colors {
-                background $barcolor
-                separator #282828
-                #                       border          bg              text
-                focused_workspace       $fws	        $fws	        $textcolor
-                inactive_workspace      $fwsib     		$fwsib	      	$itextcolor
-                urgent_workspace        $ubgcolor       $ubgcolor       $textcolor
-        }
+        #	colors {
+                #	background $barcolor
+                #	separator #282828
+                #	#                       border          bg              text
+                #	focused_workspace       $fws	        $fws	        $textcolor
+                #	inactive_workspace      $fwsib     		$fwsib	      	$itextcolor
+                #	urgent_workspace        $ubgcolor       $ubgcolor       $textcolor
+        #	}
 
 	#status_command /usr/bin/bumblebee-status -m spotify disk:root cpu \
 		#memory sensors arch-update weather pasink date time \
 		#-p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
 		#-t iceberg-rainbow
-}
+#	}
 
 # Display layout (if needed)
 #exec_always /home/mark/.screenlayout/filename.sh
