--- a/.config/i3/config
+++ b/.config/i3/config
@@ -222,7 +222,7 @@ exec_always --no-startup-id ~/.local/bin/launchpolybar.sh
 
 # wallpaper options
 #	exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
-exec_always --no-startup-id ~/.local/bin/styli.sh -s dark
+exec_always --no-startup-id ~/.local/bin/styli.sh -s colorful
 
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
