--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -232,14 +232,14 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = true;
+#blur-background = false;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false;
+#blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -255,9 +255,9 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
-  #method = "kernel";
-  strength = 3;
+  #method = "kawase";
+  method = "kernel";
+  strength = 0;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -268,7 +268,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  #"window_type = 'dock'",
+  "window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
