--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -21,6 +21,9 @@
 # │ Screen Mods    │ add (contrast)(brightness)(gamma)(saturation) │                                                                                             │
 # └────────────────┴───────────────────────────────────────────────┴─────────────────────────────────────────────────────────────────────────────────────────────┘
 
+# NOTES:
+#	i is for video info
+
 # also 0 and 9
 UP add volume +2
 DOWN add volume -2
