--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -46,13 +46,16 @@ padding-right = 15
 module-margin-left = 1
 module-margin-right = 1
 
+#	font-0 = fixed:pixelsize=10;1
+#	font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+#	font-2 = siji:pixelsize=10;1
 font-0 = DejaVu Sans:pixelsize=8;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-1 = PowerlineSymbols:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3
+modules-left = i3
 modules-center = mpd
-modules-right = powermenu filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date
+modules-right = powermenu filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date
 
 tray-position = right
 tray-padding = 4
@@ -106,27 +109,6 @@ label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
 
 [module/i3]
 type = internal/i3
@@ -259,9 +241,8 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
-date-alt = " %Y-%m-%d"
-
+date = "%Y-%m-%d"
+date-alt = 
 time = %H:%M
 time-alt = %H:%M:%S
 
@@ -420,3 +401,17 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+
+
+
+;for custom script
+;[module/NAME]
+;type = custom/script
+;interval = 1
+;format-prefix = "<icon> *
+;format = <label> (actually write out <label>)
+;exec = python path/to/script -f '....'
+;you keep this in the same dir as the config
+;and make it executable
+;or just look on the internet for what it says
+;then add the module to the bar above
